<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InterestFragment">

    <TextView
        android:id="@+id/selectYourInterestHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="87dp"
        android:text="Select Your Interests"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="351dp"
        android:layout_height="84dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/daybite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Miscellaneous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="218dp"
        android:backgroundTint="#EFE5E5"
        android:checked="false"
        android:text="@string/miscellaneousInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbAssorted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="263dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="59dp"
        android:text="@string/assortedInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="256dp"
        android:text="@string/randomInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbUnSorted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="263dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="57dp"
        android:text="@string/unsortedInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbVaried"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="267dp"
        android:text="@string/variedInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbDisordered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="263dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="47dp"
        android:text="@string/disorderedInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbScrambled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="263dp"
        android:layout_marginTop="499dp"
        android:layout_marginEnd="49dp"
        android:text="@string/scrambledInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbDifferent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="263dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="61dp"
        android:text="@string/differentInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbConglomerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="219dp"
        android:text="@string/conglomerateInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbDiverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="499dp"
        android:layout_marginEnd="261dp"
        android:text="@string/diverseInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="152dp"
        android:gravity="center"
        android:text="Create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>